--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -254,7 +254,7 @@ input:focus {
         {% if user.is_authenticated %}
           <h3>Hello {{ fname }}</h3>
           <h4>You successfully logged in.</h4>
-          <button type="submit" class="btn btn-primary btn-block btn-large"><a href="/signout">Logout</a></button>
+          <button type="submit" class="btn btn-primary btn-block btn-large"><a href="/signout">SignOut</a></button>
         {% else %}
           <button type="submit" class="btn btn-primary btn-block btn-large"><a href="/signup"> SignUp</a></button>
           <p></p>
